--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
     </header>
       
    
-
     <section class="hero-image">
       <div class="container"> 
         <h1 class="heading">Сайт</h1>
        </div>
     </section>
- 
+
 
     <section class="intro">
       <div class="container"> 
         <h2 class="subheading">Светлана Тарасова</h2>
         <figure>
           <img class="user-image"
-          src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+          src="files/user.png" width="928" height="536" alt="Фотография Британского кота>">
         </figure>
         <h3 align="center">Пара слов обо мне</h3>
         <p align="center"> Учусь и работаю, в прочем, ничего интересного.</p>
